added a script to install arch packages

--- a/configs/hypr/configs/keybindings.conf
+++ b/configs/hypr/configs/keybindings.conf
@@ -4,29 +4,41 @@ $scriptsDir = $HOME/.config/hypr/scripts
 # Set programs that you use
 $terminal = kitty
 $fileManager = nautilus
-# $menu = rofi -show drun
-# $menu = $HOME/.config/rofi/scripts/launcher_t2
 $menu = ags -t launcher
 $overview = ags -t overview
+# $menu = rofi -show drun
+# $menu = $HOME/.config/rofi/scripts/launcher_t2
 # MainMod
 $mainMod = SUPER
 
+#windows
 bind = $mainMod, Q, killactive,            # close application
 bind = $mainMod SHIFT, Q, exec, $scriptsDir/KillActiveProcess.sh
 bind = $mainMod, M, exit,                  # exit from hyprland
-bind = $mainMod, SHIFT F, togglefloating, # toggle floating mode
+bind = $mainMod, T, togglefloating, # toggle floating mode
+bind = $mainMod, F, fullscreen # set active window to fullscreen
 bind = $mainMod, P, pseudo, # dwindle      
 bind = $mainMod, J, togglesplit, # dwindle
 
-bind = $mainMod, TAB, exec, $overview
-bind = ,Print, exec, ags -r 'recorder.screenshot()'
-bind = $mainMod SHIFT, R, exec, ags -q; ags
-bind = $mainMod CTRL, R, exec, ags -r 'recorder.start()'
+bind = $mainMod SHIFT, right, resizeactive, 50 0 # Increase window width with keyboard
+bind = $mainMod SHIFT, left, resizeactive, -50 0 # Reduce window width with keyboard
+bind = $mainMod SHIFT, down, resizeactive, 0 50 # Increase window height with keyboard
+bind = $mainMod SHIFT, up, resizeactive, 0 -50 # Reduce window height with keyboard
+
+
+# Move/resize windows with mainMod + LMB/RMB and dragging
+bindm = $mainMod, mouse:271, movewindow
+bindm = $mainMod, mouse:272, resizewindow
 
 # Applicataions
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, R, exec, $menu
+bind = $mainMod, TAB, exec, $overview
+bind = ,Print, exec, ags -r 'recorder.screenshot(true)'
+bind = $mainMod SHIFT, S, exec, ags -r 'recorder.screenshot()'
+bind = $mainMod SHIFT, R, exec, ags -q; ags
+bind = $mainMod CTRL, R, exec, ags -r 'recorder.start()'
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -60,13 +72,10 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+# bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
-# Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
 
